test_results_no_defects/infer_test/uninit_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/uninit_pointer.c:208: error: Dead Store
  The value written to &buf (type char*) is never used.
  206.     /* cast void pointer to a pointer of the appropriate type */
  207.     char * * cptr = (char * *)vptr;
  208.     char * buf = "String";
           ^
  209.     buf = (*cptr); /*Tool should not detect this line as error*/ /*No ERROR:Uninitialized pointer*/
  210.     sink = buf[idx];

#1
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/uninit_pointer.c:279: error: Null Dereference
  pointer `ptr` last assigned on line 275 could be null and is dereferenced at line 279, column 4.
  277. 
  278. 		for(i=0;i<3;i++)
  279. 			ptr[i]=(int*) malloc(3*sizeof(int));
          ^
  280. 	    int arr[3][3] = {{1,2,3},
  281. 				         {11,12,13},

#2
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/uninit_pointer.c:399: error: Null Dereference
  pointer `*uninit_pointer_016_gbl_doubleptr[i]` last assigned on line 398 could be null and is dereferenced by call to `strcpy()` at line 399, column 10.
  397. 	    {
  398.     		uninit_pointer_016_gbl_doubleptr[i]=(char*) malloc(10*sizeof(char));
  399.     		   strcpy(uninit_pointer_016_gbl_doubleptr[i],"STRING00");
                ^
  400. 	    }
  401. 	}

#3
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/uninit_pointer.c:398: error: Null Dereference
  pointer `uninit_pointer_016_gbl_doubleptr` last assigned on line 395 could be null and is dereferenced at line 398, column 7.
  396.     	for(i=0;i<10;i++)
  397. 	    {
  398.     		uninit_pointer_016_gbl_doubleptr[i]=(char*) malloc(10*sizeof(char));
             ^
  399.     		   strcpy(uninit_pointer_016_gbl_doubleptr[i],"STRING00");
  400. 	    }

Found 4 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 3
              Dead Store(DEAD_STORE): 1
